[tool.poetry]
name = "aws-connect"
version = "0.1.0"
description = ""
authors = ["Szymon Bańczyk <sbanczyk02@interia.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.33.10"
fastapi = "^0.104.1"
ruff = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
