[tool.poetry]
name = "aws-connect"
version = "0.1.0"
description = ""
authors = ["Szymon Bańczyk <sbanczyk02@interia.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.33.10"
fastapi = "^0.109.2"
uvicorn = "^0.25.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
